--- a/mocap.vcxproj.filters
+++ b/mocap.vcxproj.filters
@@ -18,5 +18,8 @@
     <ClCompile Include="main.cpp">
       <Filter>File di origine</Filter>
     </ClCompile>
+    <ClCompile Include="classes\main.cpp">
+      <Filter>File di origine</Filter>
+    </ClCompile>
   </ItemGroup>
 </Project>
